--- a/src/app/formify/custom/components/address/address.component.html
+++ b/src/app/formify/custom/components/address/address.component.html
@@ -8,7 +8,7 @@
   <div [formArrayName]="arrayModel.controlName" *ngFor="let item of arrayModel['controls']; let i = index;">
     <div [formGroupName]="i">
       <div class="address-content">
-        <formify-input formControlName="address" [fieldModel]="item.field('address')"></formify-input>
+        <formify-input formControlName="street" [fieldModel]="item.field('street')"></formify-input>
         <formify-input formControlName="city" [fieldModel]="item.field('city')"></formify-input>
         <formify-select formControlName="country" [fieldModel]="item.field('country')"></formify-select>
         <formify-input formControlName="zip" [fieldModel]="item.field('zip')"></formify-input>
