add ngx json-viwer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,6 +49,9 @@
       </form>
     </div>
   </div>
+
+  {{ object | json }}
+
   <!-- Next Steps -->
   <input type="hidden" #selection>
   <!-- Terminal -->
