--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="content" role="main">
   <!-- Highlight Card -->
+
   <div class="card highlight-card card-small">
     <svg id="rocket" alt="Rocket Ship" xmlns="http://www.w3.org/2000/svg" width="101.678" height="101.678" viewBox="0 0 101.678 101.678">
       <g id="Group_83" data-name="Group 83" transform="translate(-141 -696)">
@@ -32,6 +33,7 @@
     </a>
     <div class="form">
       <div>Membership form</div>
+<!--      <pre><code [highlight]="code"></code></pre>-->
       <form [formGroup]="formify.formGroup" #form="ngForm" (ngSubmit)="onSubmit()">
         <div class="full-name-content">
           <formify-input formControlName="name" [fieldModel]="formify.field('name')"></formify-input>
@@ -47,10 +49,12 @@
         <formify-contact formGroupName="contact" [groupModel]="formify.group('contact')"></formify-contact>
         <formify-submit [submit]="formify.submit"></formify-submit>
       </form>
+      <div class="result" style="text-align: left; display: flex;flex-wrap: wrap; overflow: hidden">
+        JSON:
+        <ngx-json-viewer [json]="formify.formGroup.value"></ngx-json-viewer>
+      </div>
     </div>
   </div>
-
-  {{ object | json }}
 
   <!-- Next Steps -->
   <input type="hidden" #selection>
