--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,6 +44,7 @@
         <formify-toggle formControlName="toggle" [fieldModel]="formify.field('toggle')"></formify-toggle>
         <formify-radio formControlName="color" [fieldModel]="formify.field('color')"></formify-radio>
         <formify-exercises [groupModel]="formify.group('exercises')"></formify-exercises>
+        <formify-radio formControlName="appearance" [fieldModel]="formify.field('appearance')"></formify-radio>
         <formify-address formArrayName="address" [arrayModel]="formify.array('address')"></formify-address>
         <formify-toggle formControlName="toggleContact" [fieldModel]="formify.field('toggleContact')"></formify-toggle>
         <formify-contact formGroupName="contact" [groupModel]="formify.group('contact')"></formify-contact>
