collapsed code and unsubscribes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,7 +41,7 @@
         </div>
         <formify-select formControlName="language" [fieldModel]="formify.field('language')"></formify-select>
         <formify-textarea formControlName="biography" [fieldModel]="formify.field('biography')"></formify-textarea>
-        <formify-toggle formControlName="toggle" [fieldModel]="formify.field('toggle')"></formify-toggle>
+        <formify-toggle formControlName="toggleColor" [fieldModel]="formify.field('toggleColor')"></formify-toggle>
         <formify-radio formControlName="color" [fieldModel]="formify.field('color')"></formify-radio>
         <formify-exercises [groupModel]="formify.group('exercises')"></formify-exercises>
         <formify-radio formControlName="appearance" [fieldModel]="formify.field('appearance')"></formify-radio>
