--- a/src/app/formify/components/group-control/group-control.component.html
+++ b/src/app/formify/components/group-control/group-control.component.html
@@ -1,5 +1,5 @@
 
-<form [formGroup]="formGroup" #form="ngForm">
+<form [formGroup]="formGroup" #form="ngForm" *ngIf="groupModel">
   {{groupModel.label}}
   <ng-content></ng-content>
   <button hidden #submit></button>
