--- a/src/app/formify/custom/components/address/address.component.html
+++ b/src/app/formify/custom/components/address/address.component.html
@@ -1,7 +1,7 @@
 
 <form [formGroup]="formGroup" #form="ngForm" *ngIf="arrayModel">
   <div>
-    {{arrayModel.label}}
+    <span class="label">{{arrayModel.label}}</span>
     <button mat-icon-button (click)="addAddress()"><mat-icon>add</mat-icon></button>
     <button mat-icon-button (click)="delete()"><mat-icon color="warn">delete</mat-icon></button>
   </div>
