--- a/src/app/formify/custom/components/contact/contact.component.html
+++ b/src/app/formify/custom/components/contact/contact.component.html
@@ -1,6 +1,6 @@
 
 <form [formGroup]="formGroup" #form="ngForm" *ngIf="groupModel">
-  <span>{{groupModel.label}}</span>
+  <span class="label">{{groupModel.label}}</span>
   <div class="contact-content">
     <formify-input formControlName="phone" [fieldModel]="groupModel.field('phone')"></formify-input>
     <formify-input formControlName="email" [fieldModel]="groupModel.field('email')"></formify-input>
