add example routes

--- a/src/app/formify/components/radio/radio.component.html
+++ b/src/app/formify/components/radio/radio.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="formGroup" #form="ngForm" [autocomplete]="autoComplete" *ngIf="fieldModel && !hidden">
   <mat-label class="label">{{(!useTranslation) ? label : label | translate}}:</mat-label>
-  <mat-radio-group formControlName="control" (change)="emitValue()">
+  <mat-radio-group [formControlName]="controlName" (change)="emitValue()">
     <mat-radio-button [color]="color" *ngFor="let option of options" class="radio-button" [value]="option.value">
       {{option.text}}
     </mat-radio-button>
