--- a/src/app/formify/components/checkbox/checkbox.component.html
+++ b/src/app/formify/components/checkbox/checkbox.component.html
@@ -1,6 +1,6 @@
 
 <form [formGroup]="formGroup" #form="ngForm" [autocomplete]="autoComplete" *ngIf="fieldModel && !hidden">
-  <mat-checkbox class="checkbox" formControlName="control" [color]="color" (change)="emitValue()">
+  <mat-checkbox class="checkbox" [formControlName]="controlName" [color]="color" (change)="emitValue()">
     <mat-label>{{(!useTranslation) ? label : label | translate}}</mat-label>
   </mat-checkbox>
   <mat-icon *ngIf="icon" matSuffix [ngClass]="{'error-icon' : control.invalid && submitted | async }">{{icon}}</mat-icon>
