--- a/src/app/formify/components/toggle/toggle.component.html
+++ b/src/app/formify/components/toggle/toggle.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="formGroup" #form="ngForm" [autocomplete]="autoComplete" *ngIf="fieldModel && !hidden">
   <div class="toggle-content">
-    <mat-slide-toggle formControlName="control" color="{{color}}" (change)="emitValue()">{{(!useTranslation) ? label : label | translate}}</mat-slide-toggle>
+    <mat-slide-toggle [formControlName]="controlName" color="{{color}}" (change)="emitValue()">{{(!useTranslation) ? label : label | translate}}</mat-slide-toggle>
     <mat-icon *ngIf="icon" matSuffix [ngClass]="{'error-icon' : control.invalid && submitted | async }">{{icon}}</mat-icon>
   </div>
   <button hidden #submit></button>
