--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <div class="content" role="main">
   <!-- Highlight Card -->
-
   <div class="card highlight-card card-small">
     <svg id="rocket" alt="Rocket Ship" xmlns="http://www.w3.org/2000/svg" width="101.678" height="101.678" viewBox="0 0 101.678 101.678">
       <g id="Group_83" data-name="Group 83" transform="translate(-141 -696)">
@@ -20,15 +19,15 @@
   <h2>Examples</h2>
   <p>Here are some examples to help you get started:</p>
   <div class="card-container">
-    <a class="card" target="_blank" rel="noopener" href="https://angular.io/tutorial">
-      <span>Membership form</span>
+    <a class="card" rel="noopener" href="javascript:" routerLink="/membership">
+      <span>Membership formify</span>
       <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>    </a>
-    <a class="card" target="_blank" rel="noopener" href="https://angular.io/cli">
-      <span>Login form</span>
+    <a class="card" rel="noopener" href="javascript:" routerLink="/register">
+      <span>Register formify</span>
       <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>
     </a>
-    <a class="card" target="_blank" rel="noopener" href="https://blog.angular.io/">
-      <span>Register form</span>
+    <a class="card" rel="noopener" href="javascript:" routerLink="/login">
+      <span>Login formify</span>
       <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>
     </a>
     <div class="form">
