--- a/src/app/examples/membership/membership.component.html
+++ b/src/app/examples/membership/membership.component.html
@@ -1,6 +1,9 @@
 <div class="form-content">
-<div>Membership form</div>
-<!--      <pre><code [highlight]="code"></code></pre>-->
+<div>
+  <span>Membership formify</span>
+  <button mat-icon-button (click)="onToggleCollapse()"> <mat-icon>code</mat-icon></button>
+</div>
+  <formify-highlights [collapse]="collapse"></formify-highlights>
 <form [formGroup]="formify.formGroup" #form="ngForm" (ngSubmit)="onSubmit()">
   <div class="full-name-content">
     <formify-input formControlName="name" [fieldModel]="formify.field('name')"></formify-input>
@@ -17,7 +20,7 @@
   <formify-contact formGroupName="contact" [groupModel]="formify.group('contact')"></formify-contact>
   <formify-submit [submit]="formify.submit"></formify-submit>
 </form>
-<div class="result" style="text-align: left; display: flex;flex-wrap: wrap; overflow: hidden">
+<div class="result">
   JSON:
   <ngx-json-viewer [json]="formify.formGroup.value"></ngx-json-viewer>
 </div>
