--- a/src/app/examples/highlights/highlights.component.html
+++ b/src/app/examples/highlights/highlights.component.html
@@ -1,9 +1,12 @@
 
 <div class="code-content" *ngIf="!collapse">
-<mat-tab-group mat-align-tabs="start">
-  <mat-tab label="First">Content 1</mat-tab>
-  <mat-tab label="Second">Content 2</mat-tab>
-  <mat-tab label="Third">Content 3</mat-tab>
+<mat-tab-group mat-align-tabs="start" [selectedIndex]="1">
+  <mat-tab *ngFor="let highlight of currentHighlight.highlights" [label]="highlight.label">
+    <pre><code [highlight]="highlight.code"></code></pre>
+  </mat-tab>
+  <mat-tab label="JSON">
+    <ngx-json-viewer [json]="json" [expanded]="false"></ngx-json-viewer>
+  </mat-tab>
 </mat-tab-group>
 </div>
-<!--      <pre><code [highlight]="code"></code></pre>-->
+
