--- a/src/app/examples/membership/membership.component.html
+++ b/src/app/examples/membership/membership.component.html
@@ -3,10 +3,10 @@
   <span>Membership formify</span>
   <button mat-icon-button (click)="onToggleCollapse()"> <mat-icon>code</mat-icon></button>
 </div>
-  <formify-highlights [collapse]="collapse"></formify-highlights>
+  <formify-highlights [collapse]="collapse" [json]="formify.formGroup.value"></formify-highlights>
 <form [formGroup]="formify.formGroup" #form="ngForm" (ngSubmit)="onSubmit()">
-  <div class="full-name-content">
-    <formify-input formControlName="name" [fieldModel]="formify.field('name')"></formify-input>
+  <div class="full-name">
+    <formify-input formControlName="firstName" [fieldModel]="formify.field('firstName')"></formify-input>
     <formify-input formControlName="lastName" [fieldModel]="formify.field('lastName')"></formify-input>
   </div>
   <formify-select formControlName="language" [fieldModel]="formify.field('language')"></formify-select>
@@ -15,13 +15,9 @@
   <formify-radio formControlName="color" [fieldModel]="formify.field('color')"></formify-radio>
   <formify-exercises [groupModel]="formify.group('exercises')"></formify-exercises>
   <formify-radio formControlName="appearance" [fieldModel]="formify.field('appearance')"></formify-radio>
-  <formify-address formArrayName="address" [arrayModel]="formify.array('address')"></formify-address>
+  <formify-address [arrayModel]="formify.array('address')"></formify-address>
   <formify-toggle formControlName="toggleContact" [fieldModel]="formify.field('toggleContact')"></formify-toggle>
-  <formify-contact formGroupName="contact" [groupModel]="formify.group('contact')"></formify-contact>
+  <formify-contact [groupModel]="formify.group('contact')"></formify-contact>
   <formify-submit [submit]="formify.submit"></formify-submit>
 </form>
-<div class="result">
-  JSON:
-  <ngx-json-viewer [json]="formify.formGroup.value"></ngx-json-viewer>
-</div>
 </div>
