finished recursive formify

--- a/src/app/examples/register/register.component.html
+++ b/src/app/examples/register/register.component.html
@@ -1,1 +1,8 @@
-<p>register works!</p>
+<div class="form-content">
+  <div>
+    <span>Register formify</span>
+    <button mat-icon-button (click)="onToggleCollapse()"> <mat-icon>code</mat-icon></button>
+  </div>
+  <formify-highlights [highlightType]="Highlights.register" [collapse]="collapse" [json]="formify.formGroup.value"></formify-highlights>
+  <formify [formify]="formify" (submit)="onSubmit()"></formify>
+</div>
