--- a/src/app/examples/highlights/highlights.component.html
+++ b/src/app/examples/highlights/highlights.component.html
@@ -1,12 +1,11 @@
-
 <div class="code-content" *ngIf="!collapse">
-<mat-tab-group mat-align-tabs="start" [selectedIndex]="1">
-  <mat-tab *ngFor="let highlight of currentHighlight.highlights" [label]="highlight.label">
-    <pre><code [highlight]="highlight.code"></code></pre>
-  </mat-tab>
-  <mat-tab label="JSON">
-    <ngx-json-viewer [json]="json" [expanded]="false"></ngx-json-viewer>
-  </mat-tab>
-</mat-tab-group>
+  <mat-tab-group mat-align-tabs="start" [selectedIndex]="1" >
+    <mat-tab *ngFor="let highlight of highlight.items" [label]="highlight.label">
+      <pre><code [highlight]="highlight.code"></code></pre>
+    </mat-tab>
+    <mat-tab label="JSON">
+      <ngx-json-viewer [json]="json" [expanded]="false"></ngx-json-viewer>
+    </mat-tab>
+  </mat-tab-group>
 </div>
 
