--- a/src/app/examples/login/login.component.html
+++ b/src/app/examples/login/login.component.html
@@ -1,1 +1,8 @@
-<p>login works!</p>
+<div class="form-content">
+  <div>
+    <span>Login formify</span>
+    <button mat-icon-button (click)="onToggleCollapse()"> <mat-icon>code</mat-icon></button>
+  </div>
+  <formify-highlights [highlightType]="Highlights.login" [collapse]="collapse" [json]="formify.formGroup.value"></formify-highlights>
+  <formify [formify]="formify" (submit)="onSubmit()"></formify>
+</div>
