--- a/src/app/formify/components/formify/formify.component.scss
+++ b/src/app/formify/components/formify/formify.component.scss
@@ -1,4 +1,4 @@
-
+@import "src/app/scss/mixins";
 form{
   position: relative;
   border-radius: 4px;
@@ -18,5 +18,6 @@ p{
   }
 }
 .loading-form{
+  @include disabled-content;
   opacity: 0.7;
 }
