change address custom component

--- a/src/app/formify/custom/components/address/address.component.html
+++ b/src/app/formify/custom/components/address/address.component.html
@@ -2,8 +2,11 @@
 <form [formGroup]="formGroup" #form="ngForm" *ngIf="arrayModel">
   <div>
     <span class="label">{{arrayModel.label}}</span>
+    <span style="margin-left: 10px"> Add </span>
     <button mat-icon-button (click)="addAddress()"><mat-icon>add</mat-icon></button>
+    <span>or delete</span>
     <button mat-icon-button (click)="delete()"><mat-icon color="warn">delete</mat-icon></button>
+    <span>address group</span>
   </div>
   <div [formArrayName]="arrayModel.controlName" *ngFor="let item of arrayModel['controls']; let i = index;">
     <div [formGroupName]="i">
