--- a/src/app/examples/membership/membership.component.html
+++ b/src/app/examples/membership/membership.component.html
@@ -9,7 +9,7 @@
       <formify-input formControlName="firstName" [fieldModel]="formify.field('firstName')"></formify-input>
       <formify-input formControlName="lastName" [fieldModel]="formify.field('lastName')"></formify-input>
     </div>
-    <formify-select formControlName="language" [fieldModel]="formify.field('language')"></formify-select>
+    <formify-select formControlName="languages" [fieldModel]="formify.field('languages')"></formify-select>
     <formify-textarea formControlName="biography" [fieldModel]="formify.field('biography')"></formify-textarea>
     <formify-toggle formControlName="toggleColor" [fieldModel]="formify.field('toggleColor')"></formify-toggle>
     <formify-radio formControlName="color" [fieldModel]="formify.field('color')"></formify-radio>
