--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -40,6 +40,10 @@ p {
 .toolbar img {
   margin: 0 16px;
 }
+footer{
+  font-weight: bold;
+  font-size: 16px;
+}
 
 .toolbar #twitter-logo {
   height: 40px;
@@ -58,11 +62,32 @@ p {
 
 .content {
   display: flex;
-  margin: 22px auto 32px;
-  padding: 0 16px;
-  max-width: 960px;
+  margin: 0 auto;
+  padding: 20px 20px;
   flex-direction: column;
   align-items: center;
+  background: linear-gradient(
+      180.01deg
+    , #673ab7.01%, #FFFFFF 90.37%), #FFFFFF;
+
+  .title{
+    max-width: 800px;
+    h1 {
+      color: white;
+      text-align: center;
+      margin-top: 30px;
+    }
+  }
+  .angular-formify{
+    -webkit-box-shadow: 0px 0px 15px 0px #673AB7;
+    box-shadow: 0px 0px 15px 0px #673AB7;
+    svg{
+      filter: drop-shadow(2px 4px 6px #673ab7);
+    }
+  }
+}
+.content{
+  padding-bottom: 150px;
 }
 
 svg.material-icons {
@@ -75,7 +100,7 @@ svg.material-icons:not(:last-child) {
 }
 
 .card svg.material-icons path {
-  fill: #888;
+  fill: white;
 }
 
 .card-container {
@@ -83,13 +108,12 @@ svg.material-icons:not(:last-child) {
   flex-wrap: wrap;
   justify-content: center;
   margin-top: 16px;
-  width: 100%;
+  max-width: 800px;
 }
 
 .card {
   border-radius: 4px;
-  border: 1px solid #eee;
-  background-color: #fafafa;
+  background-color: #673ab7;
   //height: 40px;
   width: 200px;
   margin: 5px ;
@@ -100,6 +124,9 @@ svg.material-icons:not(:last-child) {
   align-items: center;
   transition: all 0.2s ease-in-out;
   line-height: 24px;
+  span{
+    color: white;
+  }
 }
 
 .card-container .card:not(:last-child) {
@@ -224,6 +251,7 @@ footer {
   display: flex;
   align-items: center;
   line-height: 20px;
+  width: 740px;
 }
 
 footer a {
@@ -259,19 +287,74 @@ footer a {
 
 svg#clouds {
   position: fixed;
-  bottom: -160px;
+  bottom: -330px;
   left: -230px;
-  z-index: -10;
+  z-index: 10;
   width: 1920px;
+  path{
+    filter: drop-shadow(40px 40px 40px #673ab7);
+  }
 }
 .form{
   width: 722px;
   max-width: 722px;
 }
 
+.footer{
+  text-align: center;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  color: var(--ngxa-color-active);
+  width: 100%;
+  .section{
+    color: #673ab7;
+    padding: 0 10px;
+    display: flex;
+    .copyright{
+      color: var(--ngxa-background);
+    }
+    a img {
+      width: 25px;
+      margin-right: 25px;
+      &:hover{
+        transform: scale(1.3);
+        transition: 0.2s;
+      }
+    }
+  }
+}
+
+@media (max-width: 430px) {
+  .footer{
+    .section{
+      a img{
+        margin-right: 10px;
+      }
+    }
+  }
+}
+
+@media (max-width: 370px) {
+  .footer{
+    .section{
+      a img{
+        margin-right: 5px;
+      }
+    }
+  }
+}
+
+
 /* Responsive Styles */
 @media screen and (max-width: 767px) {
-
+  footer{
+    width: 100%;
+  }
+  .card-container{
+    width: 100%;
+  }
   .card-container > *:not(.circle-link) ,
   .terminal {
     width: 100%;
