--- a/src/app/examples/register/register.component.html
+++ b/src/app/examples/register/register.component.html
@@ -1,8 +1,5 @@
 <div class="register-content">
-  <div>
-    <span>Register formify</span>
-    <button mat-icon-button (click)="onToggleCollapse()"> <mat-icon>code</mat-icon></button>
-  </div>
+  <formify-header style="width: 100%" label="Register formify" (toggleCollapse)="collapse = $event"></formify-header>
   <formify-highlights [highlightType]="Highlights.register" [collapse]="collapse" [json]="formify.formGroup.value"></formify-highlights>
   <div class="form-content" >
     <formify [formify]="formify" (submit)="onSubmit()"></formify>
