update github url and add racket animation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="content" role="main">
   <!-- Highlight Card -->
   <div class="card highlight-card card-small angular-formify">
-    <svg id="rocket" alt="Rocket Ship" xmlns="http://www.w3.org/2000/svg" width="101.678" height="101.678" viewBox="0 0 101.678 101.678">
+    <svg [@zoomInLeft] id="rocket" alt="Rocket Ship" xmlns="http://www.w3.org/2000/svg" width="101.678" height="101.678" viewBox="0 0 101.678 101.678">
       <g id="Group_83" data-name="Group 83" transform="translate(-141 -696)">
         <circle id="Ellipse_8" data-name="Ellipse 8" cx="50.839" cy="50.839" r="50.839" transform="translate(141 696)" fill="#673ab7"/>
         <g id="Group_47" data-name="Group 47" transform="translate(165.185 720.185)">
@@ -10,7 +10,7 @@
         </g>
       </g>
     </svg>
-    <span>Angular Formify</span>
+    <span >Angular Formify</span>
   </div>
   <!-- Resources -->
   <div class="title">
@@ -45,7 +45,7 @@
   <footer style="padding: 10px 0">
     <div class="footer">
       <div class="section">
-        <a href="https://github.com/klodianshaba/angular-animations" target="_blank" >
+        <a href="https://github.com/klodianshaba/angular-formify" target="_blank" >
           <img alt="GitHub Logo" src="./assets/images/GitHub-Mark-32px.png">
         </a>
         <a href="https://www.linkedin.com/in/klodian-shaba-536269153/" target="_blank" >
